<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_posiciones"
        android:icon="@drawable/posiciones_icon"
        android:title="@string/title_posiciones" />

    <item
        android:id="@+id/navigation_cruces"
        android:icon="@drawable/cruces_icon"
        android:title="@string/title_cruces" />

    <item
        android:id="@+id/navigation_partidos"
        android:icon="@drawable/partidos_icon"
        android:title="@string/title_partidos" />

    <item
        android:id="@+id/navigation_noticias"
        android:icon="@drawable/noticias_icon"
        android:title="@string/title_noticias" />


    <item
        android:id="@+id/navigation_equipos"
        android:icon="@drawable/equipos_icon"
        android:title="@string/title_equipos" />


</menu>